; ModuleID = '/home/carl/AnghaBench/darwin-xnu/bsd/net/extr_content_filter.c_cfil_info_buf_verify.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/bsd/net/extr_content_filter.c_cfil_info_buf_verify.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.cfi_buf = type { i64, i64, i64, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.cfi_buf*)* @cfil_info_buf_verify to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @cfil_info_buf_verify(%struct.cfi_buf* %0) #0 {
  %2 = alloca %struct.cfi_buf*, align 8
  store %struct.cfi_buf* %0, %struct.cfi_buf** %2, align 8
  %3 = load %struct.cfi_buf*, %struct.cfi_buf** %2, align 8
  %4 = getelementptr inbounds %struct.cfi_buf, %struct.cfi_buf* %3, i32 0, i32 3
  %5 = call i32 @CFIL_QUEUE_VERIFY(i32* %4)
  %6 = load %struct.cfi_buf*, %struct.cfi_buf** %2, align 8
  %7 = getelementptr inbounds %struct.cfi_buf, %struct.cfi_buf* %6, i32 0, i32 0
  %8 = load i64, i64* %7, align 8
  %9 = load %struct.cfi_buf*, %struct.cfi_buf** %2, align 8
  %10 = getelementptr inbounds %struct.cfi_buf, %struct.cfi_buf* %9, i32 0, i32 1
  %11 = load i64, i64* %10, align 8
  %12 = icmp sle i64 %8, %11
  %13 = zext i1 %12 to i32
  %14 = call i32 @VERIFY(i32 %13)
  %15 = load %struct.cfi_buf*, %struct.cfi_buf** %2, align 8
  %16 = getelementptr inbounds %struct.cfi_buf, %struct.cfi_buf* %15, i32 0, i32 2
  %17 = load i64, i64* %16, align 8
  %18 = icmp sge i64 %17, 0
  %19 = zext i1 %18 to i32
  %20 = call i32 @VERIFY(i32 %19)
  ret void
}

declare dso_local i32 @CFIL_QUEUE_VERIFY(i32*) #1

declare dso_local i32 @VERIFY(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
